# hecl

./: LICENSE  Main.hs  README.md  hecl.cabal
src/Hecl/: Math.hs  Special.hs  String.hs
src/Hecl/List/: Combinatorics.hs
src/Hecl/Math/: NumberTheory.hs
src/Hecl/Math/NumberTheory/: MathSequence.hs
src/Hecl/String/: StringList.hs
test/: heclSpec.hs
