name:                hecl
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/Entze/hecl#readme
license:             BSD3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          entze@grassauer.eu
copyright:           2020 Lukas Grassauer
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  exposed-modules:      Hecl.Math,
                        Hecl.Math.NumberTheory,
                        Hecl.Math.NumberTheory.MathSequence,
                        Hecl.String.StringList,
                        Hecl.String,
			Hecl.Special
  build-depends:        base >= 4 && <= 5,
                        regex-tdfa >= 1.3 && < 2
--                      liquidhaskell >= 0.8 && <1

executable hec
  default-language:     Haskell2010
  main-is:              Main.hs
--  other-modules:       Hecl
  build-depends:        hecl,
                        base >= 4.7 && < 5


test-suite heclSpec
    type:               exitcode-stdio-1.0
  ghc-options:          -Wall
  main-is:              heclSpec.hs
  hs-source-dirs:       test
  build-depends:        base >= 4.7 && < 5,
                        hspec >= 2.7 && <3,
                        hspec-core >= 2.7 && <3,
                        QuickCheck >= 2.13 && <3,
                        leancheck >= 0.9 && <1,
                        hspec-leancheck >= 0.0.4 && < 1,
                        hecl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Entze/hecl
